--- a/src/app/evaluation/url-input/url-input.component.scss
+++ b/src/app/evaluation/url-input/url-input.component.scss
@@ -18,7 +18,7 @@
   }
 
   .info {
-    color: lightblue;
+    color: #78ade6;
   }
 
   .error {
@@ -29,7 +29,7 @@
 .info-tooltip {
   font-size: 1em;
   color: whitesmoke;
-  background-color: lightblue;
+  background-color: #1c5d95;
 }
 
 .error-tooltip {
