--- a/src/app/layout/header/floating-breadcrumbs/floating-breadcrumbs.component.html
+++ b/src/app/layout/header/floating-breadcrumbs/floating-breadcrumbs.component.html
@@ -41,6 +41,7 @@
     </button>
     -->
 
+    <!-- TODO language
     <button mat-icon-button [matMenuTriggerFor]="languages" matTooltip="{{'HEADER.language' | translate}}"
             attr.aria-label="{{'HEADER.language' | translate}}">
       <mat-icon>language</mat-icon>
@@ -49,6 +50,6 @@
     <mat-menu #languages="matMenu">
       <button (click)="changeLanguage('Portuguese')" mat-menu-item>{{"LANGUAGES.Portuguese" | translate}}</button>
       <button (click)="changeLanguage('English')" mat-menu-item>{{"LANGUAGES.English" | translate}}</button>
-    </mat-menu>
+    </mat-menu> -->
   </span>
 </div>
