--- a/src/app/pages/home-page/home-page.component.html
+++ b/src/app/pages/home-page/home-page.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="column" fxLayoutAlign="center center">
-  <img src="/assets/images/logo2.png" alt="Qualweb logo" />
+  <img src="/assets/images/logo2.png" alt="Qualweb logo"/>
 </div>
 <section fxLayout="row" fxLayoutAlign="center center">
   <div fxFlex="60" fxFlex.lt-md="75" fxFlex.lt-sm="90">
@@ -8,5 +8,5 @@
   </div>
 </section>
 <div fxLayout="row" class="line">
-  <a routerLink="about" >Acerca do QualWeb</a>
+  <a routerLink="about"> {{ 'HOMEPAGE.about' | translate }} </a>
 </div>
