--- a/src/app/evaluation/url-input/url-input.component.html
+++ b/src/app/evaluation/url-input/url-input.component.html
@@ -1,7 +1,7 @@
 <mat-card class="input_url">
-  <form (submit)="submit($event)" novalidate>
-    <input type="url" placeholder="{{ 'INPUT_URL.placeholder' | translate }}" [formControl]="urlForm" autofocus fxFlex>
-    <div fxLayout="row" fxLayoutAlign="center center">
+  <form (submit)="submit($event)" novalidate fxLayout="row">
+    <input type="url" placeholder="{{ 'INPUT_URL.placeholder' | translate }}" [formControl]="urlForm" autofocus fxFlex="70" fxFlex.gt-sm="85">
+    <div fxLayout="row" fxLayoutAlign="center center" fxFlex="10" fxFlex.gt-sm="5">
       <mat-icon class="info" *ngIf="urlForm.hasError('required')" matTooltip="Ex.: www.google.pt" matTooltipClass="info-tooltip">
         info
       </mat-icon>
@@ -9,7 +9,7 @@
         error
       </mat-icon>
     </div>
-    <button mat-button type="submit" [disabled]="urlForm.invalid">
+    <button mat-button type="submit" [disabled]="urlForm.invalid" fxFlex="20" fxFlex.gt-sm>
       {{ "INPUT_URL.submit" | translate }}
     </button>
   </form>
