--- a/src/app/layout/header/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/layout/header/breadcrumbs/breadcrumbs.component.html
@@ -17,7 +17,7 @@
       <mat-icon>brightness_3</mat-icon>
     </button>
     -->
-
+    <!-- TODO language
     <button mat-icon-button [matMenuTriggerFor]="languages" matTooltip="{{'HEADER.language' | translate}}"
             attr.aria-label="{{'HEADER.language' | translate}}">
       <mat-icon>language</mat-icon>
@@ -26,6 +26,6 @@
     <mat-menu #languages="matMenu">
       <button (click)="changeLanguage('Portuguese')" mat-menu-item>{{"LANGUAGES.Portuguese" | translate}}</button>
       <button (click)="changeLanguage('English')" mat-menu-item>{{"LANGUAGES.English" | translate}}</button>
-    </mat-menu>
+    </mat-menu>-->
   </span>
 </div>
