result titles, rule types, sticky header, new (but same error) code beautifier

--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -6,5 +6,5 @@
     </button>
   </mat-toolbar>-->
   <app-breadcrumbs></app-breadcrumbs>
-  <app-floating-breadcrumbs [hidden]="!floatingBreadcrumbs"></app-floating-breadcrumbs>
+  <!--app-floating-breadcrumbs [hidden]="!floatingBreadcrumbs"></app-floating-breadcrumbs-->
 </header>
