--- a/src/app/layout/header/breadcrumbs/breadcrumbs.component.scss
+++ b/src/app/layout/header/breadcrumbs/breadcrumbs.component.scss
@@ -1,7 +1,7 @@
 div {
   width: 100%;
-  height: 4em;
-
+  height: 5em;
+ /*
   nav {
     margin-top: 1%;
     margin-left: 1%;
@@ -15,15 +15,17 @@ div {
     a:hover {
       text-decoration: underline;
     }
-  }
+  } */
+}
+
+a {
+  pointer-events: all;
 }
 
 .right-buttons {
-  margin-top: 1%;
   margin-left: 1%;
 }
 
 .left-buttons {
-  margin-top: 1%;
   margin-right: 1%;
 }
