--- a/src/app/pages/evaluation-page/evaluation-page.component.html
+++ b/src/app/pages/evaluation-page/evaluation-page.component.html
@@ -408,8 +408,8 @@
                     <mat-card-content fxLayoutAlign="start center" *ngIf="test.htmlCode || test.cssCode"
                                       fxLayout="row" fxLayoutGap="2" fxFlex>
 
-                      <pre *ngIf="getType(rule) === 'act' || getType(rule) === 'html' || getType(rule) === 'bp'" fxFlex="95"><code [highlight]="formatCode(test.htmlCode)"></code></pre>
-                      <pre *ngIf="getType(rule) === 'css'" fxFlex="100"><code [highlight]="test.cssCode.toString()"></code></pre>
+                      <pre *ngIf="getType(rule) === 'act' || getType(rule) === 'html' || getType(rule) === 'bp'" fxFlex="95"><code>{{ formatCode(test.htmlCode) }}</code></pre> <!-- [highlight]="" -->
+                      <pre *ngIf="getType(rule) === 'css'" fxFlex="100"><code>{{ test.cssCode.toString() }}</code></pre> <!-- [highlight]="" -->
 
                       <button *ngIf="!getType(rule) === 'css'" mat-icon-button fxFlex (click)="openCodeDialog(test.htmlCode)"
                               matTooltip="{{'EVALUATION_PAGE.report.result_code' | translate}}">
