updated to angular 9. Updated evaluation page

--- a/src/app/pages/evaluation-page/evaluation-page.component.html
+++ b/src/app/pages/evaluation-page/evaluation-page.component.html
@@ -443,8 +443,9 @@
   <div fxLayoutAlign="center center">
     <img src="/assets/images/logo2.png" alt="Qualweb logo"/>
   </div>
-  <div fxLayoutAlign="center center">
+  <div fxLayout="column" fxLayoutAlign="center center">
     <mat-spinner color="primary" [diameter]="130" [strokeWidth]="13"></mat-spinner>
+    <p [innerHTML]="'EVALUATION_PAGE.loading.' + currentModule | translate"></p>
   </div>
 </div>
 
